--- a/swri_transform_util/CMakeLists.txt
+++ b/swri_transform_util/CMakeLists.txt
@@ -11,8 +11,8 @@ find_package(catkin REQUIRED COMPONENTS
   gps_common
   diagnostic_msgs
   swri_math_util
-  yaml_util
-)
+  swri_yaml_util
+) 
 
 find_package(OpenCV REQUIRED)
 
@@ -29,7 +29,7 @@ catkin_package(
     gps_common
     diagnostic_msgs
     swri_math_util
-    yaml_util
+    swri_yaml_util
 )
 
 include_directories(include ${catkin_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS})
