Fixes missing boost dependency in swri_serial_util. Refs #234.

--- a/swri_serial_util/package.xml
+++ b/swri_serial_util/package.xml
@@ -12,5 +12,7 @@
   <url>https://github.com/swri-robotics/marti_common</url>
   
   <buildtool_depend>catkin</buildtool_depend>
+
+  <depend>boost</depend>
 </package>
 
