--- a/swri_geometry_util/package.xml
+++ b/swri_geometry_util/package.xml
@@ -12,9 +12,11 @@
   <url>https://github.com/swri-robotics/marti_common</url>
   
   <buildtool_depend>catkin</buildtool_depend>
-  <depend>eigen</depend>  
-  <depend>roscpp</depend>
+
   <depend>cmake_modules</depend>
+  <depend>eigen</depend>
   <depend>libgeos++-dev</depend>
   <depend>libopencv-dev</depend>
+  <depend>roscpp</depend>
+  <depend>tf</depend>
 </package>
