Removes deprecated Eigen cmake module. (Issue #245)

--- a/swri_image_util/CMakeLists.txt
+++ b/swri_image_util/CMakeLists.txt
@@ -2,21 +2,19 @@ cmake_minimum_required(VERSION 2.8.3)
 project(swri_image_util)
 
 find_package(catkin REQUIRED COMPONENTS 
-  roscpp
-  rospy
-  roslib
-  std_msgs
-  nodelet
+  camera_calibration_parsers
   cv_bridge
-  tf
-  cmake_modules
   geometry_msgs
   image_geometry
+  image_transport
   nav_msgs
-  camera_calibration_parsers
+  nodelet
+  roscpp
+  rospy
+  std_msgs
   swri_math_util
   swri_opencv_util
-  image_transport
+  tf
 )
 
 find_package(OpenCV)
@@ -29,8 +27,8 @@ if(${Boost_LIB_VERSION} MATCHES "1_46*")
   add_definitions( -DBOOST_1_46 )
 endif(${Boost_LIB_VERSION} MATCHES "1_46*")
 
-find_package(Eigen REQUIRED)
-add_definitions(${EIGEN_DEFINITIONS})
+find_package(Eigen3 REQUIRED)
+add_definitions(${EIGEN3_DEFINITIONS})
 
 include(${QT_USE_FILE})
 
@@ -38,24 +36,22 @@ catkin_package(
   INCLUDE_DIRS include
   LIBRARIES ${PROJECT_NAME}
   CATKIN_DEPENDS 
-    roscpp
-    roscpp
-    rospy
-    roslib
-    std_msgs
-    nodelet
+    camera_calibration_parsers
     cv_bridge
-    tf
     geometry_msgs
     image_geometry
+    image_transport
     nav_msgs
-    camera_calibration_parsers
+    nodelet
+    roscpp
+    rospy
+    std_msgs
     swri_math_util
     swri_opencv_util
-    image_transport
+    tf
 )
 
-include_directories(include ${catkin_INCLUDE_DIRS} ${QT_INCLUDE_DIR} ${OpenCV_INCLUDE_DIRS} ${EIGEN_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
+include_directories(include ${catkin_INCLUDE_DIRS} ${QT_INCLUDE_DIR} ${OpenCV_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR} ${Boost_INCLUDE_DIRS})
 
 add_library(${PROJECT_NAME} 
   src/image_normalization.cpp 
