--- a/image_util/CMakeLists.txt
+++ b/image_util/CMakeLists.txt
@@ -112,3 +112,5 @@ install(DIRECTORY launch
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
+install(FILES nodelet_plugins.xml DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+
