--- a/transform_util/CMakeLists.txt
+++ b/transform_util/CMakeLists.txt
@@ -81,3 +81,5 @@ install(TARGETS ${PROJECT_NAME} lat_lon_tf_echo
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 )
 
+install(FILES transformer_plugins.xml DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+
