Install prefixes to share directory.

--- a/prefix_tools/CMakeLists.txt
+++ b/prefix_tools/CMakeLists.txt
@@ -3,3 +3,12 @@ project(prefix_tools)
 
 find_package(catkin REQUIRED)
 catkin_package()
+
+install(PROGRAMS xterm_prefix
+                 xterm_prefix_callgrind
+                 xterm_prefix_callgrind_wait
+                 xterm_prefix_gdb
+                 xterm_prefix_hold
+                 xterm_prefix_normal
+        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
