Installing libtransformer_plugins.

--- a/transform_util/CMakeLists.txt
+++ b/transform_util/CMakeLists.txt
@@ -75,7 +75,9 @@ install(DIRECTORY include/${PROJECT_NAME}/
   FILES_MATCHING PATTERN "*.h"
 )
 
-install(TARGETS ${PROJECT_NAME} lat_lon_tf_echo
+install(TARGETS ${PROJECT_NAME}
+                lat_lon_tf_echo
+                transformer_plugins
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
