--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,11 @@ env:
     - USE_DEB=true
       ROS_DISTRO="jade" 
       ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
-      ADDITIONAL_DEBS="ros-jade-marti-can-msgs ros-jade-marti-common-msgs ros-jade-marti-data-structures ros-jade-marti-nav-msgs ros-jade-marti-perception-msgs ros-jade-marti-sensor-msgs ros-jade-marti-visualization-msgs libeigen3-dev"
+      ADDITIONAL_DEBS="ros-jade-marti-can-msgs ros-jade-marti-common-msgs ros-jade-marti-data-structures ros-jade-marti-nav-msgs ros-jade-marti-perception-msgs ros-jade-marti-sensor-msgs ros-jade-marti-visualization-msgs"
     - USE_DEB=true 
       ROS_DISTRO="jade"   
       ROS_REPOSITORY_PATH=http://packages.ros.org/ros-shadow-fixed/ubuntu
-      ADDITIONAL_DEBS="ros-jade-marti-can-msgs ros-jade-marti-common-msgs ros-jade-marti-data-structures ros-jade-marti-nav-msgs ros-jade-marti-perception-msgs ros-jade-marti-sensor-msgs ros-jade-marti-visualization-msgs libeigen3-dev"
+      ADDITIONAL_DEBS="ros-jade-marti-can-msgs ros-jade-marti-common-msgs ros-jade-marti-data-structures ros-jade-marti-nav-msgs ros-jade-marti-perception-msgs ros-jade-marti-sensor-msgs ros-jade-marti-visualization-msgs"
 install:
   - git clone https://github.com/ros-industrial/industrial_ci.git .ci_config
 script: 
