--- a/swri_geometry_util/package.xml
+++ b/swri_geometry_util/package.xml
@@ -12,7 +12,7 @@
   <url>https://github.com/swri-robotics/marti_common</url>
   
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>cmake-modules</build_depend>
+  <build_depend>cmake_modules</build_depend>
   <depend>eigen</depend>
   <depend>libgeos++-dev</depend>
   <depend>libopencv-dev</depend>
