--- a/swri_image_util/package.xml
+++ b/swri_image_util/package.xml
@@ -14,7 +14,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>camera_calibration_parsers</depend>
-  <build_depend>cmake-modules</build_depend>
+  <build_depend>cmake_modules</build_depend>
   <depend>cv_bridge</depend>
   <depend>eigen</depend>
   <depend>geometry_msgs</depend>
