--- a/swri_rospy/package.xml
+++ b/swri_rospy/package.xml
@@ -11,4 +11,5 @@
   <buildtool_depend>catkin</buildtool_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>std_srvs</exec_depend>
 </package>
