Adds the ability to warn when unused parameters are set in a namespace.
A common error when using unfamiliar ROS nodes is to accidentally set
parameters by the wrong name. This features allows the node author
to output a WARNING for any unused parameters.

See the param_test node for an example.

--- a/swri_roscpp/CMakeLists.txt
+++ b/swri_roscpp/CMakeLists.txt
@@ -41,6 +41,9 @@ target_link_libraries(service_server_test ${catkin_LIBRARIES})
 add_executable(timer_test src/nodes/timer_test.cpp)
 target_link_libraries(timer_test ${catkin_LIBRARIES})
 
+add_executable(param_test src/nodes/param_test.cpp)
+target_link_libraries(param_test ${catkin_LIBRARIES})
+
 ### Install Test Node and Headers ###
 install(TARGETS subscriber_test latched_subscriber_test
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
