--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,14 @@ env:
     - USE_DEB=true
       ROS_DISTRO="jade" 
       ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
-      ADDITIONAL_DEBS="ros-jade-marti-can-msgs ros-jade-marti-common-msgs ros-jade-marti-data-structures ros-jade-marti-nav-msgs ros-jade-marti-perception-msgs ros-jade-marti-sensor-msgs ros-jade-marti-visualization-msgs"
+      # marti_common does not use opencv3, but having it installed will cause
+      # packages that depend on opencv2 to fail if they aren't explicit about
+      # which version they depend on.
+      ADDITIONAL_DEBS="ros-jade-opencv3"
     - USE_DEB=true 
       ROS_DISTRO="jade"   
       ROS_REPOSITORY_PATH=http://packages.ros.org/ros-shadow-fixed/ubuntu
-      ADDITIONAL_DEBS="ros-jade-marti-can-msgs ros-jade-marti-common-msgs ros-jade-marti-data-structures ros-jade-marti-nav-msgs ros-jade-marti-perception-msgs ros-jade-marti-sensor-msgs ros-jade-marti-visualization-msgs"
+      ADDITIONAL_DEBS="ros-jade-opencv3"
 install:
   - git clone https://github.com/ros-industrial/industrial_ci.git .ci_config
 script: 
