--- a/swri_yaml_util/CMakeLists.txt
+++ b/swri_yaml_util/CMakeLists.txt
@@ -3,14 +3,15 @@ project(swri_yaml_util)
 
 find_package(catkin REQUIRED)
 
-catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES ${PROJECT_NAME} yaml-cpp
-)
-
 find_package(PkgConfig)
 pkg_check_modules(YamlCpp yaml-cpp)
 message(STATUS "YAML-CPP VERSION: " ${YamlCpp_VERSION})
+message(STATUS "YAML-CPP LIBRARY: " ${YamlCpp_LIBRARIES})
+
+catkin_package(
+  INCLUDE_DIRS include
+  LIBRARIES ${PROJECT_NAME} ${YamlCpp_LIBRARIES}
+)
 
 if( ${YamlCpp_VERSION} MATCHES "0.[23].*")
   set(YAMLCPP_OLD_API ON)
@@ -29,8 +30,8 @@ include_directories(include ${Boost_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS} ${YamlC
 add_library(${PROJECT_NAME}
   src/yaml_util.cpp
 )
-target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${YamlCpp_LIBRARY})
-  
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${YamlCpp_LIBRARIES})
+
 install(DIRECTORY include/${PROJECT_NAME}/
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
   FILES_MATCHING PATTERN "*.h"
