Adding an explicit dependency on pkg-config

--- a/swri_yaml_util/package.xml
+++ b/swri_yaml_util/package.xml
@@ -12,6 +12,7 @@
   <url>https://github.com/swri-robotics/marti_common</url>
   
   <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>pkg-config</buildtool_depend>
   <depend>boost</depend>
   <depend>yaml-cpp</depend>
 </package>
