Fix name of opencv3 for kinetic in travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,11 @@ env:
     # marti_common does not use opencv3, but having it installed will cause
     # packages that depend on opencv2 to fail if they aren't explicit about
     # which version they depend on.
-    - ADDITIONAL_DEBS="ros-jade-opencv3"
   matrix:
-    - ROS_DISTRO="jade"    ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
-    - ROS_DISTRO="jade"    ROS_REPOSITORY_PATH=http://packages.ros.org/ros-shadow-fixed/ubuntu
-    - ROS_DISTRO="kinetic" ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
-    - ROS_DISTRO="kinetic" ROS_REPOSITORY_PATH=http://packages.ros.org/ros-shadow-fixed/ubuntu
+    - ROS_DISTRO="jade"     ADDITIONAL_DEBS="ros-jade-opencv3"    ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
+    - ROS_DISTRO="jade"     ADDITIONAL_DEBS="ros-jade-opencv3"    ROS_REPOSITORY_PATH=http://packages.ros.org/ros-shadow-fixed/ubuntu
+    - ROS_DISTRO="kinetic"  ADDITIONAL_DEBS="ros-kinetic-opencv3" ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
+    - ROS_DISTRO="kinetic"  ADDITIONAL_DEBS="ros-kinetic-opencv3" ROS_REPOSITORY_PATH=http://packages.ros.org/ros-shadow-fixed/ubuntu
 matrix:
   allow_failures:
     - env: ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
