--- a/.travis.yml
+++ b/.travis.yml
@@ -11,17 +11,18 @@ notifications:
 env:
   global:
     - USE_DEB=true
-    - ROS_DISTRO="jade"
     # marti_common does not use opencv3, but having it installed will cause
     # packages that depend on opencv2 to fail if they aren't explicit about
     # which version they depend on.
-    - ADDITIONAL_DEBS="ros-jade-opencv3"
   matrix:
-    - ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
-    - ROS_REPOSITORY_PATH=http://packages.ros.org/ros-shadow-fixed/ubuntu
+    - ROS_DISTRO="jade"     ADDITIONAL_DEBS="ros-jade-opencv3"    ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
+    - ROS_DISTRO="jade"     ADDITIONAL_DEBS="ros-jade-opencv3"    ROS_REPOSITORY_PATH=http://packages.ros.org/ros-shadow-fixed/ubuntu
+    - ROS_DISTRO="kinetic"  ADDITIONAL_DEBS="ros-kinetic-opencv3" ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
+    - ROS_DISTRO="kinetic"  ADDITIONAL_DEBS="ros-kinetic-opencv3" ROS_REPOSITORY_PATH=http://packages.ros.org/ros-shadow-fixed/ubuntu
 matrix:
   allow_failures:
-    - env: ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
+    - env: ROS_DISTRO="jade"     ADDITIONAL_DEBS="ros-jade-opencv3"    ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
+    - env: ROS_DISTRO="kinetic"  ADDITIONAL_DEBS="ros-kinetic-opencv3" ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
 install:
   - git clone https://github.com/ros-industrial/industrial_ci.git .ci_config
 script: 
