--- a/swri_geometry_util/package.xml
+++ b/swri_geometry_util/package.xml
@@ -14,5 +14,6 @@
   <buildtool_depend>catkin</buildtool_depend>
   
   <depend>cmake_modules</depend>
+  <depend>eigen</depend>
   <depend>roscpp</depend>
 </package>
