--- a/swri_yaml_util/package.xml
+++ b/swri_yaml_util/package.xml
@@ -12,5 +12,8 @@
   <url>https://github.com/swri-robotics/marti_common</url>
   
   <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>pkg-config</buildtool_depend>
+  <depend>boost</depend>
+<depend>yaml-cpp</depend>
 </package>
 
