--- a/swri_transform_util/package.xml
+++ b/swri_transform_util/package.xml
@@ -14,6 +14,7 @@
   
   <buildtool_depend>catkin</buildtool_depend>
   
+  <depend>boost</depend>
   <depend>diagnostic_msgs</depend>
   <depend>geographic_msgs</depend>
   <depend>gps_common</depend>
