Add missing boost random dependency

--- a/swri_math_util/package.xml
+++ b/swri_math_util/package.xml
@@ -14,5 +14,6 @@
   <buildtool_depend>catkin</buildtool_depend>
   
   <depend>roscpp</depend>
+  <depend>libboost-random-dev</depend>
 
 </package>
