Add a simple nodelet for testing
Add a nodelet to swri_nodelet that publishes a number to be used
for testing swri_nodelet.

--- a/swri_nodelet/CMakeLists.txt
+++ b/swri_nodelet/CMakeLists.txt
@@ -3,14 +3,19 @@ project(swri_nodelet)
 
 set(BUILD_DEPS 
   nodelet
-  )
+  roscpp
+  std_msgs
+)
 
 set(RUNTIME_DEPS ${BUILD_DEPS})
 
 find_package(catkin REQUIRED COMPONENTS ${BUILD_DEPS})
 catkin_package(
   CATKIN_DEPENDS ${RUNTIME_DEPS}
-  )
+)
+
+add_library(swri_nodelet_test src/test_nodelet.cpp)
+target_link_libraries(swri_nodelet_test ${catkin_LIBRARIES})
 
 install(PROGRAMS 
   nodes/nodelet
