--- a/swri_nodelet/package.xml
+++ b/swri_nodelet/package.xml
@@ -14,7 +14,10 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>nodelet</depend>
+  <exec_depend>rosbash</exec_depend>
+  <test_depend>rosbash</test_depend>
   <depend>roscpp</depend>
+  <test_depend>rostest</test_depend>
   <depend>std_msgs</depend>
   <export>
     <nodelet plugin="${prefix}/nodelet_plugins.xml" />
