--- a/swri_roscpp/package.xml
+++ b/swri_roscpp/package.xml
@@ -11,8 +11,10 @@
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
   <depend>diagnostic_updater</depend>
+  <test_depend>gtest</test_depend>
   <depend>nav_msgs</depend>
   <depend>roscpp</depend>
+  <test_depend>rostest</test_depend>
   <depend>std_msgs</depend>
   <depend>std_srvs</depend>
   <export/>
