--- a/swri_transform_util/package.xml
+++ b/swri_transform_util/package.xml
@@ -19,6 +19,7 @@
   <depend>geographic_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>libgeos++-dev</depend>
+  <depend>opencv3</depend>
   <depend>pluginlib</depend>
   <depend>proj</depend>
   <depend>roscpp</depend>
