Fix OpenCV dependencies for Kinetic build

--- a/swri_geometry_util/package.xml
+++ b/swri_geometry_util/package.xml
@@ -13,9 +13,9 @@
   
   <buildtool_depend>catkin</buildtool_depend>
   <buildtool_depend>pkg-config</buildtool_depend>
+  <depend>cv_bridge</depend>
   <depend>eigen</depend>
   <depend>libgeos++-dev</depend>
-  <depend>libopencv-dev</depend>
   <depend>roscpp</depend>
   <depend>tf</depend>
 </package>
