--- a/swri_opencv_util/package.xml
+++ b/swri_opencv_util/package.xml
@@ -13,7 +13,7 @@
   
   <buildtool_depend>catkin</buildtool_depend>
   
-  <depend>libopencv-dev</depend>
+  <depend>cv_bridge</depend>
   <depend>swri_math_util</depend>
 
 </package>
