--- a/swri_roscpp/CMakeLists.txt
+++ b/swri_roscpp/CMakeLists.txt
@@ -41,16 +41,19 @@ target_link_libraries(service_server_test ${catkin_LIBRARIES})
 add_executable(timer_test src/nodes/timer_test.cpp)
 target_link_libraries(timer_test ${catkin_LIBRARIES})
 
-add_executable(param_test src/nodes/param_test.cpp)
-target_link_libraries(param_test ${catkin_LIBRARIES})
+add_executable(param_example src/nodes/param_example.cpp)
+target_link_libraries(param_example ${catkin_LIBRARIES})
 
 ### Install Test Node and Headers ###
-install(TARGETS subscriber_test latched_subscriber_test
+install(TARGETS subscriber_test latched_subscriber_test param_example
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 install(DIRECTORY include/${PROJECT_NAME}/
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+)
+install(DIRECTORY launch/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
