--- a/swri_image_util/package.xml
+++ b/swri_image_util/package.xml
@@ -21,6 +21,7 @@
   <depend>image_geometry</depend>
   <depend>image_transport</depend>
   <depend>libqt4-dev</depend>
+  <depend>message_filters</depend>
   <depend>nav_msgs</depend>
   <depend>nodelet</depend>
   <depend>roscpp</depend>
