--- a/swri_geometry_util/package.xml
+++ b/swri_geometry_util/package.xml
@@ -13,6 +13,8 @@
   
   <buildtool_depend>catkin</buildtool_depend>
   <buildtool_depend>pkg-config</buildtool_depend>
+
+  <depend>cmake_modules</depend>
   <depend>cv_bridge</depend>
   <depend>eigen</depend>
   <depend>libgeos++-dev</depend>
