Add OpenCV dependency
swri_geometry_util used OpenCV but didn't declare its dependency.

--- a/swri_geometry_util/package.xml
+++ b/swri_geometry_util/package.xml
@@ -15,6 +15,7 @@
   <buildtool_depend>pkg-config</buildtool_depend>
 
   <depend>cmake_modules</depend>
+  <depend>cv_bridge</depend>
   <depend>eigen</depend>
   <depend>libgeos++-dev</depend>
   <depend>libopencv-dev</depend>
