Update rosdoc for swri_transform_util
- Update mainpage.dox
- Add rosdoc configuration file

--- a/swri_transform_util/package.xml
+++ b/swri_transform_util/package.xml
@@ -41,6 +41,7 @@
   <export>
     <nodelet plugin="${prefix}/nodelet_plugins.xml" />
     <swri_transform_util plugin="${prefix}/transformer_plugins.xml" />
+    <rosdoc config="rosdoc.yaml" />
   </export>
 </package>
 
