--- a/swri_transform_util/rosdoc.yaml
+++ b/swri_transform_util/rosdoc.yaml
@@ -2,4 +2,4 @@
 - builder: doxygen
   name: C++ API
   output_dir: c++
-  file_patterns: '*.c *.cpp *.h *.cc *.hh *.dox'
+  file_patterns: '*.h *.dox'
