Create warp_image Nodelet
Add a nodelet to swri_image util that applies a 3x3 transformation
matrix to an image using cv::warpPerspective and publishes the
resulting image.

--- a/swri_image_util/package.xml
+++ b/swri_image_util/package.xml
@@ -28,6 +28,7 @@
   <depend>std_msgs</depend>
   <depend>swri_geometry_util</depend>
   <depend>swri_math_util</depend>
+  <build_depend>swri_nodelet</build_depend>
   <depend>swri_opencv_util</depend>
   <depend>tf</depend>
 
