--- a/swri_image_util/package.xml
+++ b/swri_image_util/package.xml
@@ -20,6 +20,8 @@
   <depend>geometry_msgs</depend>
   <depend>image_geometry</depend>
   <depend>image_transport</depend>
+  <depend>libqt4-opengl-dev</depend>
+  <depend>libqt4-gui</depend>
   <depend>libqt5-opengl-dev</depend>
   <depend>libqt5-gui</depend>
   <depend>message_filters</depend>
