--- a/swri_image_util/package.xml
+++ b/swri_image_util/package.xml
@@ -13,11 +13,6 @@
  
   <buildtool_depend>catkin</buildtool_depend>
   <buildtool_depend>pkg-config</buildtool_depend>
-  <buildtool_depend>qt4-qmake</buildtool_depend>
-  <buildtool_depend>qt5-qmake</buildtool_depend>
-
-  <build_depend>libqt4-opengl-dev</build_depend>
-  <build_depend>libqt5-opengl-dev</build_depend>
 
   <depend>camera_calibration_parsers</depend>
   <depend>cv_bridge</depend>
@@ -25,21 +20,16 @@
   <depend>geometry_msgs</depend>
   <depend>image_geometry</depend>
   <depend>image_transport</depend>
-  <depend>libqt4</depend>
-  <depend>libqt5-core</depend>
-  <depend>libqt5-gui</depend>
   <depend>message_filters</depend>
   <depend>nav_msgs</depend>
   <depend>nodelet</depend>
   <depend>roscpp</depend>
   <depend>rospy</depend>
   <depend>std_msgs</depend>
+  <depend>swri_geometry_util</depend>
   <depend>swri_math_util</depend>
   <depend>swri_opencv_util</depend>
   <depend>tf</depend>
-
-  <exec_depend>libqt4-opengl</exec_depend>
-  <exec_depend>libqt5-opengl</exec_depend>
 
   <test_depend>rostest</test_depend>
 
