--- a/swri_image_util/CMakeLists.txt
+++ b/swri_image_util/CMakeLists.txt
@@ -79,6 +79,7 @@ add_library(${PROJECT_NAME}
   src/image_matching.cpp
   src/image_normalization.cpp 
   src/image_warp_util.cpp
+  src/replace_colors.cpp
   src/rolling_normalization.cpp 
 )
 target_link_libraries(${PROJECT_NAME} 
@@ -92,6 +93,7 @@ add_library(${PROJECT_NAME}_nodelets
   src/nodelets/contrast_stretch_nodelet.cpp
   src/nodelets/draw_text_nodelet.cpp
   src/nodelets/normalize_response_nodelet.cpp
+  src/nodelets/replace_colors_nodelet.cpp
   src/nodelets/rotate_image_nodelet.cpp
   src/nodelets/scale_image_nodelet.cpp
   src/nodelets/warp_image_nodelet.cpp
@@ -125,6 +127,9 @@ target_link_libraries(scale_image ${catkin_LIBRARIES})
 swri_nodelet_add_node(warp_image ${PROJECT_NAME} WarpImageNodelet)
 target_link_libraries(warp_image ${PROJECT_NAME}_nodelets ${OpenCV_LIBRARIES} ${catkin_LIBRARIES})
 
+add_executable(replace_colors src/nodes/replace_colors.cpp)
+target_link_libraries(replace_colors ${catkin_LIBRARIES})
+
 if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
   add_rostest_gtest(test_geometry_util test/geometry_util.test test/test_geometry_util.cpp)
@@ -144,9 +149,11 @@ install(TARGETS ${PROJECT_NAME}
     dummy_image_publisher
     normalization_image_generator_node
     normalize_response
+    replace_colors
     rotate_image
     scale_image
     warp_image
+    blend_images
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
@@ -155,4 +162,3 @@ install(TARGETS ${PROJECT_NAME}
 install(FILES nodelet_plugins.xml
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
-
