--- a/swri_image_util/CMakeLists.txt
+++ b/swri_image_util/CMakeLists.txt
@@ -76,6 +76,7 @@ add_library(${PROJECT_NAME}
   src/image_matching.cpp
   src/image_normalization.cpp 
   src/image_warp_util.cpp
+  src/replace_colors.cpp
   src/rolling_normalization.cpp 
 )
 target_link_libraries(${PROJECT_NAME} 
@@ -89,6 +90,7 @@ add_library(${PROJECT_NAME}_nodelets
   src/nodelets/contrast_stretch_nodelet.cpp
   src/nodelets/draw_text_nodelet.cpp
   src/nodelets/normalize_response_nodelet.cpp
+  src/nodelets/replace_colors_nodelet.cpp
   src/nodelets/rotate_image_nodelet.cpp
   src/nodelets/scale_image_nodelet.cpp
 )
@@ -118,6 +120,9 @@ target_link_libraries(normalize_response ${catkin_LIBRARIES})
 add_executable(blend_images src/nodes/blend_images_node.cpp)
 target_link_libraries(blend_images ${catkin_LIBRARIES})
 
+add_executable(replace_colors src/nodes/replace_colors.cpp)
+target_link_libraries(replace_colors ${catkin_LIBRARIES})
+
 if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
   add_rostest_gtest(test_geometry_util test/geometry_util.test test/test_geometry_util.cpp)
@@ -138,6 +143,7 @@ install(TARGETS ${PROJECT_NAME}
     draw_text
     contrast_stretch
     normalize_response
+    replace_colors
     blend_images
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
@@ -147,4 +153,3 @@ install(TARGETS ${PROJECT_NAME}
 install(FILES nodelet_plugins.xml
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
-
