--- a/swri_image_util/CMakeLists.txt
+++ b/swri_image_util/CMakeLists.txt
@@ -86,6 +86,7 @@ target_link_libraries(${PROJECT_NAME}
 
 add_library(${PROJECT_NAME}_nodelets
   src/nodelets/blend_images_nodelet.cpp
+  src/nodelets/crosshairs_nodelet.cpp
   src/nodelets/contrast_stretch_nodelet.cpp
   src/nodelets/draw_text_nodelet.cpp
   src/nodelets/normalize_response_nodelet.cpp
@@ -118,6 +119,9 @@ target_link_libraries(normalize_response ${catkin_LIBRARIES})
 add_executable(blend_images src/nodes/blend_images_node.cpp)
 target_link_libraries(blend_images ${catkin_LIBRARIES})
 
+swri_nodelet_add_node(crosshairs ${PROJECT_NAME} CrosshairsNodelet)
+target_link_libraries(crosshairs ${PROJECT_NAME}_nodelets ${OpenCV_LIBRARIES} ${catkin_LIBRARIES})
+
 if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
   add_rostest_gtest(test_geometry_util test/geometry_util.test test/test_geometry_util.cpp)
@@ -131,7 +135,8 @@ install(DIRECTORY include/${PROJECT_NAME}/
 
 install(TARGETS ${PROJECT_NAME} 
     ${PROJECT_NAME}_nodelets
-    normalization_image_generator_node 
+    normalization_image_generator_node
+    crosshairs
     dummy_image_publisher
     rotate_image
     scale_image
