Add route speed functions (#466)
* Add visualization function for swri_route_util.
* Add code to calculate max speeds based on curvature to swri_route_util.
* Add speed/obstacle functionality to swri_route_util.

--- a/swri_route_util/package.xml
+++ b/swri_route_util/package.xml
@@ -13,9 +13,13 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <depend>marti_common_msgs</depend>
   <depend>marti_nav_msgs</depend>
   <depend>roscpp</depend>
   <depend>swri_transform_util</depend>
+  <depend>swri_math_util</depend>
+  <depend>swri_geometry_util</depend>
+  <depend>visualization_msgs</depend>
 
   <export>
   </export>
