--- a/swri_serial_util/package.xml
+++ b/swri_serial_util/package.xml
@@ -1,4 +1,4 @@
-<package format="2">
+<package format="3">
   <name>swri_serial_util</name>
   <version>2.10.0</version>
   <description>
@@ -7,12 +7,16 @@
 
   </description>
   <author>Marc Alban</author>
-  <maintainer email="malban@swri.org">Marc Alban</maintainer>
+  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
   <license>BSD</license>
   <url>https://github.com/swri-robotics/marti_common</url>
   
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>boost</depend>
+
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
 
