--- a/swri_dbw_interface/package.xml
+++ b/swri_dbw_interface/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package format="2">
+<package format="3">
   <name>swri_dbw_interface</name>
   <version>2.10.0</version>
   <description>
@@ -8,10 +8,13 @@
   </description>
 
   <author>Elliot Johnson</author>
-  <maintainer email="malban@swri.org">Marc Alban</maintainer>
+  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
   <license>BSD</license>
   <url>https://github.com/swri-robotics/marti_common</url>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
