--- a/swri_image_util/package.xml
+++ b/swri_image_util/package.xml
@@ -14,6 +14,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>pkg-config</buildtool_depend>
 
+  <depend>ament_index_cpp</depend>
   <depend>camera_calibration_parsers</depend>
   <depend>cv_bridge</depend>
   <depend>eigen</depend>
