--- a/swri_transform_util/CMakeLists.txt
+++ b/swri_transform_util/CMakeLists.txt
@@ -1,25 +1,22 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.10)
 project(swri_transform_util)
 
-find_package(catkin REQUIRED COMPONENTS
-  diagnostic_msgs
-  geographic_msgs
-  geometry_msgs
-  gps_common
-  nodelet
-  roscpp
-  rospy
-  swri_math_util
-  swri_nodelet
-  swri_roscpp
-  swri_yaml_util
-  tf
-  topic_tools
-)
+set(CMAKE_CXX_STANDARD 14)
 
-catkin_python_setup()
+find_package(ament_cmake REQUIRED)
+find_package(diagnostic_msgs REQUIRED)
+find_package(geographic_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(gps_msgs REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(swri_math_util REQUIRED)
+find_package(swri_roscpp REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
+find_package(tf2_ros REQUIRED)
 
-find_package(OpenCV  REQUIRED core highgui imgproc video)
+find_package(yaml-cpp REQUIRED)
+find_package(OpenCV REQUIRED core highgui imgproc video)
 find_package(Boost REQUIRED)
 
 find_package(PkgConfig REQUIRED)
@@ -32,31 +29,10 @@ if(NOT "${PROJ_FOUND}")
   )
 endif()
 
-catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES ${PROJECT_NAME}
-  CATKIN_DEPENDS
-    diagnostic_msgs
-    geographic_msgs
-    geometry_msgs
-    gps_common
-    nodelet
-    roscpp
-    rospy
-    swri_math_util
-    swri_nodelet
-    swri_roscpp
-    swri_yaml_util
-    tf
-    topic_tools
-  DEPENDS PROJ
-)
-
-include_directories(include 
-  ${catkin_INCLUDE_DIRS} 
-  ${Boost_INCLUDE_DIRS} 
+include_directories(include
   ${OpenCV_INCLUDE_DIRS}
   ${PROJ_INCLUDE_DIRS}
+  ${YAML_CPP_INCLUDE_DIR}
 )
 
 add_library(${PROJECT_NAME}
@@ -70,7 +46,25 @@ add_library(${PROJECT_NAME}
   src/utm_transformer.cpp
   src/wgs84_transformer.cpp)
 link_directories(${OpenCV_LIBRARY_DIRS})
-target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${OpenCV_LIBS} ${PROJ_LIBRARIES})
+target_link_libraries(${PROJECT_NAME}
+  Boost::boost
+  ${OpenCV_LIBS}
+  ${PROJ_LIBRARIES}
+  ${YAML_CPP_LIBRARIES}
+)
+ament_target_dependencies(${PROJECT_NAME}
+  diagnostic_msgs
+  geographic_msgs
+  geometry_msgs
+  gps_msgs
+  nodelet
+  rclcpp
+  swri_math_util
+  swri_roscpp
+  tf2
+  tf2_geometry_msgs
+  tf2_ros
+)
 
 add_library(${PROJECT_NAME}_nodelets
   src/nodelets/dynamic_publisher.cpp
@@ -80,50 +74,59 @@ target_link_libraries(${PROJECT_NAME}_nodelets ${catkin_LIBRARIES} ${PROJECT_NAM
 add_executable(lat_lon_tf_echo src/nodes/lat_lon_tf_echo.cpp)
 target_link_libraries(lat_lon_tf_echo ${PROJECT_NAME})
 
-swri_nodelet_add_node(gps_transform_publisher ${PROJECT_NAME} GpsTransformPublisher)
-target_link_libraries(gps_transform_publisher ${PROJECT_NAME}_nodelets ${catkin_LIBRARIES})
+#swri_nodelet_add_node(gps_transform_publisher ${PROJECT_NAME} GpsTransformPublisher)
+#target_link_libraries(gps_transform_publisher ${PROJECT_NAME}_nodelets ${catkin_LIBRARIES})
 
-if(CATKIN_ENABLE_TESTING)
-  find_package(rostest REQUIRED)
+if(BUILD_TESTING)
+  find_package(ament_cmake_gtest REQUIRED)
 
-  add_rostest_gtest(test_local_xy_util launch/local_xy_util.test test/test_local_xy_util.cpp)
-  target_link_libraries(test_local_xy_util ${PROJECT_NAME})
-
-  add_rostest_gtest(test_utm_util launch/utm_util.test test/test_utm_util.cpp)
-  target_link_libraries(test_utm_util ${PROJECT_NAME})
-
-  add_rostest_gtest(test_transform_manager launch/transform_manager.test test/test_transform_manager.cpp)
-  target_link_libraries(test_transform_manager ${PROJECT_NAME})
-
-  add_rostest_gtest(test_georeference launch/georeference.test test/test_georeference.cpp)
-  target_link_libraries(test_georeference ${PROJECT_NAME})
-
-  add_rostest_gtest(test_transform_util launch/transform_util.test test/test_transform_util.cpp)
-  target_link_libraries(test_transform_util ${PROJECT_NAME})
-
-  add_rostest(test/initialize_invalid_gps.test)
-  add_rostest(test/initialize_invalid_navsat.test)
-  add_rostest(test/initialize_origin_auto_custom.test)
-  add_rostest(test/initialize_origin_auto_gps.test)
-  add_rostest(test/initialize_origin_auto_navsat.test)
-  add_rostest(test/initialize_origin_manual.test)
+#  add_rostest_gtest(test_local_xy_util launch/local_xy_util.test test/test_local_xy_util.cpp)
+#  target_link_libraries(test_local_xy_util ${PROJECT_NAME})
+#
+#  add_rostest_gtest(test_utm_util launch/utm_util.test test/test_utm_util.cpp)
+#  target_link_libraries(test_utm_util ${PROJECT_NAME})
+#
+#  add_rostest_gtest(test_transform_manager launch/transform_manager.test test/test_transform_manager.cpp)
+#  target_link_libraries(test_transform_manager ${PROJECT_NAME})
+#
+#  add_rostest_gtest(test_georeference launch/georeference.test test/test_georeference.cpp)
+#  target_link_libraries(test_georeference ${PROJECT_NAME})
+#
+#  add_rostest_gtest(test_transform_util launch/transform_util.test test/test_transform_util.cpp)
+#  target_link_libraries(test_transform_util ${PROJECT_NAME})
+#
+#  add_rostest(test/initialize_invalid_gps.test)
+#  add_rostest(test/initialize_invalid_navsat.test)
+#  add_rostest(test/initialize_origin_auto_custom.test)
+#  add_rostest(test/initialize_origin_auto_gps.test)
+#  add_rostest(test/initialize_origin_auto_navsat.test)
+#  add_rostest(test/initialize_origin_manual.test)
 endif()
 
-install(DIRECTORY include/${PROJECT_NAME}/
-  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-  FILES_MATCHING PATTERN "*.h"
+install(DIRECTORY include/
+  DESTINATION include
 )
 
 install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_nodelets lat_lon_tf_echo
-  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION bin
+  LIBRARY DESTINATION lib
+  ARCHIVE DESTINATION lib
 )
 
 ### Install Python Nodes/Scripts ###
-catkin_install_python(PROGRAMS nodes/initialize_origin.py
-  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
-
-install(FILES nodelet_plugins.xml
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+install(PROGRAMS nodes/initialize_origin.py
+  DESTINATION bin
 )
+
+ament_export_dependencies(ament_cmake)
+ament_export_include_directories(include
+  ${YAML_CPP_INCLUDE_DIR}
+)
+ament_export_libraries(${PROJECT_NAME}
+  ${PROJECT_NAME}_nodelets
+  ${OpenCV_LIBS}
+  ${PROJ_LIBRARIES}
+  ${YAML_CPP_LIBRARIES}
+)
+
+ament_package()
