--- a/swri_roscpp/package.xml
+++ b/swri_roscpp/package.xml
@@ -13,6 +13,8 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
+  <build_depend>rosidl_cmake</build_depend>
+
   <depend>diagnostic_updater</depend>
   <!--
   TODO pjr Is rcl_interfaces the replacement for dynamic reconfig now?
@@ -24,7 +26,9 @@
   <depend>std_msgs</depend>
   <depend>std_srvs</depend>
 
-  <test_depend>rosidl_default_runtime</test_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+
+  <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>gtest</test_depend>
 
   <member_of_group>rosidl_interface_packages</member_of_group>
